@@ -22,11 +22,6 @@ import com.ritense.authorization.Action;
 import com.ritense.authorization.AuthorizationService;
 import com.ritense.authorization.EntityAuthorizationRequest;
 import com.ritense.valtimo.contract.database.QueryDialectHelper;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
-import org.springframework.transaction.annotation.Transactional;
-
 import javax.persistence.EntityManager;
 import javax.persistence.TypedQuery;
 import javax.persistence.criteria.CriteriaBuilder;
@@ -34,7 +29,10 @@ import javax.persistence.criteria.CriteriaQuery;
 import javax.persistence.criteria.Predicate;
 import javax.persistence.criteria.Root;
 import java.util.List;
-import java.util.stream.Collectors;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
+import org.springframework.transaction.annotation.Transactional;
 
 @Transactional
 public class AuditSearchServiceImpl implements AuditSearchService {
@@ -69,7 +67,7 @@ public class AuditSearchServiceImpl implements AuditSearchService {
                     isNotNull(cb, root, searchCriteria.getPath(), searchCriteria.getValue()),
                     isNotNull(cb, root, "$.className", searchCriteria.getAuditEvent().getName())
                 )
-            ).collect(Collectors.toList());
+            ).toList();
 
         query
             .where(cb.or(predicateList.toArray(Predicate[]::new)))
